--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,12 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900');
+@import '~@mdi/font/css/materialdesignicons.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 // Variables
 @import 'variables';
+
+
+@import '~vuetify/dist/vuetify.min.css';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
